Refactored modal generator factory, fix for nav shifting bug when modal pops up, other various modal style tweaks

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -597,7 +597,14 @@ body #page-header #header-wrapper #credit {
   position: absolute;
   right: 10em; }
 
-.modal-header, .modal-body {
+.modal-open {
+  overflow-y: scroll;
+  padding-right: 0 !important; }
+
+.modal {
+  margin-left: 17px; }
+
+.modal-header {
   text-align: center; }
 
 .modal-body-saved-search {
